<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023-24 Paranoid Android
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/dolby_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="true"
        android:key="dolby_enable"
        android:title="@string/dolby_enable" />

    <ListPreference
        android:key="dolby_profile"
        android:entries="@array/dolby_profile_entries"
        android:entryValues="@array/dolby_profile_values"
        android:defaultValue="0"
        android:title="@string/dolby_profile_title"
        android:summary="%s"
        android:icon="@drawable/ic_dolby" />

    <PreferenceCategory
        android:key="dolby_category_settings"
        android:title="@string/dolby_category_settings">

        <Preference
            android:key="dolby_preset"
            android:title="@string/dolby_preset">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="co.aospa.dolby.xiaomi"
                android:targetClass="co.aospa.dolby.xiaomi.geq.EqualizerActivity" />
        </Preference>

        <co.aospa.dolby.xiaomi.preference.DolbyIeqPreference
            android:key="dolby_ieq"
            android:entries="@array/dolby_ieq_entries"
            android:entryValues="@array/dolby_ieq_values"
            android:title="@string/dolby_ieq" />

        <SwitchPreferenceCompat
            android:key="dolby_spk_virtualizer"
            android:title="@string/dolby_spk_virtualizer" />

        <SwitchPreferenceCompat
            android:key="dolby_virtualizer"
            android:title="@string/dolby_hp_virtualizer" />

        <SeekBarPreference
            android:key="dolby_stereo_widening"
            android:title="@string/dolby_strength"
            android:dependency="dolby_virtualizer"
            android:min="@integer/stereo_widening_min"
            android:max="@integer/stereo_widening_max"/>

        <SwitchPreferenceCompat
            android:key="dolby_dialogue_enabled"
            android:title="@string/dolby_dialogue_enhancer" />

        <SeekBarPreference
            android:key="dolby_dialogue_amount"
            android:title="@string/dolby_strength"
            android:dependency="dolby_dialogue_enabled"
            android:min="@integer/dialogue_enhancer_min"
            android:max="@integer/dialogue_enhancer_max"/>

        <SwitchPreferenceCompat
            android:key="dolby_bass"
            android:title="@string/dolby_bass_enhancer" />

        <SwitchPreferenceCompat
            android:key="dolby_volume"
            android:title="@string/dolby_volume_leveler" />

        <SeekBarPreference
            android:key="dolby_volume_amount"
            android:title="@string/dolby_strength"
            android:dependency="dolby_volume"
            android:defaultValue="5"
            android:min="@integer/volume_leveler_min"
            android:max="@integer/volume_leveler_max"/>

        <SwitchPreferenceCompat
            android:key="dolby_volume_modeler"
            android:title="@string/dolby_volume_modeler" />

        <SwitchPreferenceCompat
            android:key="dolby_audio_optimizer"
            android:title="@string/dolby_audio_optimizer" />

        <Preference
            android:key="dolby_reset"
            android:title="@string/dolby_reset_profile" />

    </PreferenceCategory>

</PreferenceScreen>
